Update .po files

--- a/po/hu.po
+++ b/po/hu.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-bad 1.6.0\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2015-09-25 22:59+0200\n"
+"POT-Creation-Date: 2015-12-24 13:55+0100\n"
 "PO-Revision-Date: 2015-11-20 23:46+0100\n"
 "Last-Translator: Balázs Úr <urbalazs@gmail.com>\n"
 "Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
@@ -19,254 +19,236 @@ msgstr ""
 "X-Generator: Lokalize 1.2\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
-#: ext/gl/gstgltestsrc.c:673
 msgid "format wasn't negotiated before get function"
 msgstr "a formátum nem lett egyeztetve a függvény lekérése előtt"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:5
 msgid "default GStreamer sound events audiosink"
 msgstr "alapértelmezett GStreamer hangesemények audiosink"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:6
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:19
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:32
-msgid "GStreamer can play audio using any number of output elements. Some possible choices are osssink, pulsesink and alsasink. The audiosink can be a partial pipeline instead of just one element."
-msgstr "A GStreamer képes hangot lejátszani bármilyen számú kimeneti elem használatával. Néhány lehetséges választás a következő lehet: osssink, pulsesink és alsasink. Az audiosink lehet egy részleges adatcsatorna is egyetlen elem helyett."
+msgid ""
+"GStreamer can play audio using any number of output elements. Some possible "
+"choices are osssink, pulsesink and alsasink. The audiosink can be a partial "
+"pipeline instead of just one element."
+msgstr ""
+"A GStreamer képes hangot lejátszani bármilyen számú kimeneti elem "
+"használatával. Néhány lehetséges választás a következő lehet: osssink, "
+"pulsesink és alsasink. Az audiosink lehet egy részleges adatcsatorna is "
+"egyetlen elem helyett."
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:13
 msgid "description for default GStreamer sound events audiosink"
 msgstr "az alapértelmezett GStreamer hangesemények audiosink leírása"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:14
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:27
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:40
 msgid "Describes the selected audiosink element."
 msgstr "Leírja a kiválasztott audiosink elemet."
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:18
 msgid "default GStreamer audiosink for Audio/Video Conferencing"
 msgstr "alapértelmezett GStreamer audiosink a hang/videó konferenciához"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:26
-msgid "description for default GStreamer audiosink for Audio/Video Conferencing"
-msgstr "az alapértelmezett GStreamer audiosink leírása a hang/videó konferenciához"
+msgid ""
+"description for default GStreamer audiosink for Audio/Video Conferencing"
+msgstr ""
+"az alapértelmezett GStreamer audiosink leírása a hang/videó konferenciához"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:31
 msgid "default GStreamer audiosink for Music and Movies"
 msgstr "alapértelmezett GStreamer audiosink zenékhez és filmekhez"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:39
 msgid "description for default GStreamer audiosink for Music and Movies"
 msgstr "az alapértelmezett GStreamer audiosink leírása zenékhez és filmekhez"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:44
 msgid "default GStreamer videosink"
 msgstr "alapértelmezett GStreamer videosink"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:45
-msgid "GStreamer can play video using any number of output elements. Some possible choices are xvimagesink, ximagesink, sdlvideosink and aasink. The videosink can be a partial pipeline instead of just one element."
-msgstr "A GStreamer képes videót lejátszani bármilyen számú kimeneti elem használatával. Néhány lehetséges választás a következő lehet: xvimagesink, ximagesink, sdlvideosink és aasink. Az videosink lehet egy részleges adatcsatorna is egyetlen elem helyett."
+msgid ""
+"GStreamer can play video using any number of output elements. Some possible "
+"choices are xvimagesink, ximagesink, sdlvideosink and aasink. The videosink "
+"can be a partial pipeline instead of just one element."
+msgstr ""
+"A GStreamer képes videót lejátszani bármilyen számú kimeneti elem "
+"használatával. Néhány lehetséges választás a következő lehet: xvimagesink, "
+"ximagesink, sdlvideosink és aasink. Az videosink lehet egy részleges "
+"adatcsatorna is egyetlen elem helyett."
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:52
 msgid "description for default GStreamer videosink"
 msgstr "az alapértelmezett GStreamer videosink leírása"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:53
 msgid "Describes the selected videosink element."
 msgstr "Leírja a kiválasztott videosink elemet."
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:57
 msgid "default GStreamer audiosrc"
 msgstr "alapértelmezett GStreamer audiosrc"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:58
-msgid "GStreamer can record audio using any number of input elements. Some possible choices are osssrc, pulsesrc and alsasrc. The audio source can be a partial pipeline instead of just one element."
-msgstr "A GStreamer képes hangot felvenni bármilyen számú bemeneti elem használatával. Néhány lehetséges választás a következő lehet: osssrc, pulsesrc és alsasrc. A hangforrás lehet egy részleges adatcsatorna is egyetlen elem helyett."
+msgid ""
+"GStreamer can record audio using any number of input elements. Some possible "
+"choices are osssrc, pulsesrc and alsasrc. The audio source can be a partial "
+"pipeline instead of just one element."
+msgstr ""
+"A GStreamer képes hangot felvenni bármilyen számú bemeneti elem "
+"használatával. Néhány lehetséges választás a következő lehet: osssrc, "
+"pulsesrc és alsasrc. A hangforrás lehet egy részleges adatcsatorna is "
+"egyetlen elem helyett."
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:65
 msgid "description for default GStreamer audiosrc"
 msgstr "az alapértelmezett GStreamer audiosrc leírása"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:66
 msgid "Describes the selected audiosrc element."
 msgstr "Leírja a kiválasztott audiosrc elemet."
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:70
 msgid "default GStreamer videosrc"
 msgstr "alapértelmezett GStreamer videosrc"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:71
-msgid "GStreamer can record video from any number of input elements. Some possible choices are v4lsrc, v4l2src and videotestsrc. The video source can be a partial pipeline instead of just one element."
-msgstr "A GStreamer képes videót felvenni bármilyen számú bemeneti elem használatával. Néhány lehetséges választás a következő lehet: v4lsrc, v4l2src és videotestsrc. A videoforrás lehet egy részleges adatcsatorna is egyetlen elem helyett."
+msgid ""
+"GStreamer can record video from any number of input elements. Some possible "
+"choices are v4lsrc, v4l2src and videotestsrc. The video source can be a "
+"partial pipeline instead of just one element."
+msgstr ""
+"A GStreamer képes videót felvenni bármilyen számú bemeneti elem "
+"használatával. Néhány lehetséges választás a következő lehet: v4lsrc, "
+"v4l2src és videotestsrc. A videoforrás lehet egy részleges adatcsatorna is "
+"egyetlen elem helyett."
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:77
 msgid "description for default GStreamer videosrc"
 msgstr "az alapértelmezett GStreamer videosrc leírása"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:78
 msgid "Describes the selected videosrc element."
 msgstr "Leírja a kiválasztott videosrc elemet."
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:82
 msgid "default GStreamer visualization"
 msgstr "alapértelmezett GStreamer képi megjelenítés"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:83
-msgid "GStreamer can put visualization plugins in a pipeline to transform audio streams in video frames. Some possible choices are goom, goom2k1 and synaesthesia. The visualization plugin can be a partial pipeline instead of just one element."
-msgstr "A GStreamer képes képi megjelenítő bővítményeket elhelyezni egy adatcsatornába a videoképkockákban lévő hangfolyamok átalakításához. Néhány lehetséges választás a következő lehet: goom, goom2k1 és synaesthesia. A képi megjelenítő bővítmény lehet egy részleges adatcsatorna is egyetlen elem helyett."
+msgid ""
+"GStreamer can put visualization plugins in a pipeline to transform audio "
+"streams in video frames. Some possible choices are goom, goom2k1 and "
+"synaesthesia. The visualization plugin can be a partial pipeline instead of "
+"just one element."
+msgstr ""
+"A GStreamer képes képi megjelenítő bővítményeket elhelyezni egy "
+"adatcsatornába a videoképkockákban lévő hangfolyamok átalakításához. Néhány "
+"lehetséges választás a következő lehet: goom, goom2k1 és synaesthesia. A "
+"képi megjelenítő bővítmény lehet egy részleges adatcsatorna is egyetlen elem "
+"helyett."
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:90
 msgid "description for default GStreamer visualization"
 msgstr "az alapértelmezett GStreamer képi megjelenítés leírása"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:91
 msgid "Describes the selected visualization element."
 msgstr "Leírja a kiválasztott képi megjelenítés elemet."
 
-#: ext/opencv/gsttemplatematch.c:442
 msgid "OpenCV failed to load template image"
 msgstr "Az OpenCV-nek nem sikerült betöltenie a sablonképet"
 
-#: ext/resindvd/resindvdsrc.c:362
 msgid "Could not read title information for DVD."
 msgstr "Nem lehet címinformációkat olvasni a DVD-ről."
 
-#: ext/resindvd/resindvdsrc.c:368
 #, c-format
 msgid "Failed to open DVD device '%s'."
 msgstr "Nem nyitható meg a DVD eszköz („%s”)."
 
-#: ext/resindvd/resindvdsrc.c:374
 msgid "Failed to set PGC based seeking."
 msgstr "A PGC-alapú keresés beállítása meghiúsult."
 
-#: ext/resindvd/resindvdsrc.c:1166
-msgid "Could not read DVD. This may be because the DVD is encrypted and a DVD decryption library is not installed."
-msgstr "Nem olvasható a DVD. Ezt az okozhatja, hogy a DVD titkosított, és a DVD-visszafejtő programkönyvtár nincs telepítve."
+msgid ""
+"Could not read DVD. This may be because the DVD is encrypted and a DVD "
+"decryption library is not installed."
+msgstr ""
+"Nem olvasható a DVD. Ezt az okozhatja, hogy a DVD titkosított, és a DVD-"
+"visszafejtő programkönyvtár nincs telepítve."
 
-#: ext/resindvd/resindvdsrc.c:1171 ext/resindvd/resindvdsrc.c:1180
 msgid "Could not read DVD."
 msgstr "Nem olvasható a DVD."
 
-#: ext/smoothstreaming/gstmssdemux.c:380
-#: gst-libs/gst/adaptivedemux/gstadaptivedemux.c:525
 msgid "This file contains no playable streams."
 msgstr "Ez a fájl nem tartalmaz lejátszható folyamokat."
 
-#: ext/sndfile/gstsfdec.c:769
 msgid "Could not open sndfile stream for reading."
 msgstr "A hangfájl folyam nem nyitható meg olvasásra."
 
-#: ext/sndio/sndiosink.c:324 ext/sndio/sndiosrc.c:321
 msgid "Could not establish connection to sndio"
 msgstr "Nem hozható létre kapcsolat az sndio programmal"
 
-#: ext/sndio/sndiosink.c:331 ext/sndio/sndiosrc.c:328
 msgid "Failed to query sndio capabilities"
 msgstr "Nem sikerült lekérdezni az sndio képességeit"
 
-#: ext/sndio/sndiosink.c:424 ext/sndio/sndiosrc.c:422
 msgid "Could not configure sndio"
 msgstr "Nem sikerült az sndio beállítása"
 
-#: ext/sndio/sndiosink.c:430 ext/sndio/sndiosrc.c:428
 msgid "Could not start sndio"
 msgstr "Nem sikerült az sndio indítása"
 
-#: gst/aiff/aiffparse.c:1458
 msgid "Internal data flow error."
 msgstr "Belső adatfolyamhiba."
 
-#: gst/asfmux/gstasfmux.c:1832
 msgid "Generated file has a larger preroll time than its streams duration"
-msgstr "Az előállított fájlnak nagyobb előtekerési ideje van, mint a folyamának időtartama"
+msgstr ""
+"Az előállított fájlnak nagyobb előtekerési ideje van, mint a folyamának "
+"időtartama"
 
-#: gst/camerabin2/camerabingeneral.c:166 gst/camerabin2/gstcamerabin2.c:1876
-#: gst/camerabin2/gstdigitalzoom.c:282 gst/camerabin2/gstviewfinderbin.c:271
 #, c-format
 msgid "Missing element '%s' - check your GStreamer installation."
 msgstr "Hiányzó „%s” elem - ellenőrizze a GStreamer telepítését."
 
-#: gst/camerabin2/gstcamerabin2.c:364
 msgid "File location is set to NULL, please set it to a valid filename"
-msgstr "A fájl helye NULL értékre lett állítva, kérjük állítsa be egy érvényes fájlnévre"
+msgstr ""
+"A fájl helye NULL értékre lett állítva, kérjük állítsa be egy érvényes "
+"fájlnévre"
 
-#: gst/camerabin2/gstwrappercamerabinsrc.c:584
 msgid "Digitalzoom element couldn't be created"
 msgstr "A digitális nagyítás elemet nem sikerült létrehozni"
 
-#: gst/dvdspu/gstdvdspu.c:1040
 msgid "Subpicture format was not configured before data flow"
 msgstr "A részkép formátuma nem lett beállítva az adatfolyam előtt"
 
-#: gst-libs/gst/adaptivedemux/gstadaptivedemux.c:2081
 msgid "Failed to get fragment URL."
 msgstr "Nem sikerült lekérni a töredék URL-t."
 
-#: gst-libs/gst/adaptivedemux/gstadaptivedemux.c:2282
-#: gst-libs/gst/adaptivedemux/gstadaptivedemux.c:2446
-#: gst/mpegtsdemux/mpegtsbase.c:1342 gst/mpegtsdemux/mpegtsbase.c:1346
-#: gst/nuvdemux/gstnuvdemux.c:736
 msgid "Internal data stream error."
 msgstr "Belső adatfolyamhiba."
 
-#: gst-libs/gst/adaptivedemux/gstadaptivedemux.c:2383
 msgid "Couldn't download fragments"
 msgstr "Nem sikerült letölteni a töredékeket"
 
-#: gst/videomeasure/gstvideomeasure_collector.c:294
 msgid "No file name specified for writing."
 msgstr "Nincs megadva fájlnév az íráshoz."
 
-#: gst/videomeasure/gstvideomeasure_collector.c:300
 #, c-format
 msgid "Given file name \"%s\" can't be converted to local file name encoding."
-msgstr "A kapott „%s” fájlnevet nem lehet átalakítani a helyi fájlnév kódolásra."
+msgstr ""
+"A kapott „%s” fájlnevet nem lehet átalakítani a helyi fájlnév kódolásra."
 
-#: gst/videomeasure/gstvideomeasure_collector.c:307
 #, c-format
 msgid "Could not open file \"%s\" for writing."
 msgstr "A fájl („%s”) nem nyitható meg írásra."
 
-#: sys/dvb/gstdvbsrc.c:1565 sys/dvb/gstdvbsrc.c:1754
 #, c-format
 msgid "Device \"%s\" does not exist."
 msgstr "Az eszköz („%s”) nem létezik."
 
-#: sys/dvb/gstdvbsrc.c:1569
 #, c-format
 msgid "Could not open frontend device \"%s\"."
 msgstr "Nem nyitható meg az előtéteszköz („%s”)."
 
-#: sys/dvb/gstdvbsrc.c:1583
 #, c-format
 msgid "Could not get settings from frontend device \"%s\"."
 msgstr "Nem kérhetők le a beállítások az előtéteszköztől („%s”)."
 
-#: sys/dvb/gstdvbsrc.c:1600
 #, c-format
 msgid "Cannot enumerate delivery systems from frontend device \"%s\"."
-msgstr "Nem lehet felsorolni a szállító rendszereket a(z) „%s” előtéteszköztől."
+msgstr ""
+"Nem lehet felsorolni a szállító rendszereket a(z) „%s” előtéteszköztől."
 
-#: sys/dvb/gstdvbsrc.c:1758
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "A fájl („%s”) nem nyitható meg olvasásra."
 
-#: sys/dvb/parsechannels.c:168
 msgid "Couldn't find DVB channel configuration file"
 msgstr "Nem található DVB-csatorna beállítófájl"
 
-#: sys/dvb/parsechannels.c:171
 #, c-format
 msgid "Couldn't load DVB channel configuration file: %s"
 msgstr "Nem sikerült betölteni a DVB-csatorna beállítófájlt: %s"
 
-#: sys/dvb/parsechannels.c:180
 msgid "DVB channel configuration file doesn't contain any channels"
 msgstr "A DVB-csatorna beállítófájl nem tartalmaz egyetlen csatornát sem"
 
-#: sys/dvb/parsechannels.c:456
 #, c-format
 msgid "Couldn't find details for DVB channel %s"
 msgstr "Nem találhatók a(z) %s DVB-csatorna részletei"
@@ -283,8 +265,12 @@ msgstr "Nem találhatók a(z) %s DVB-csatorna részletei"
 #~ msgid "Could not open audio device for mixer control handling."
 #~ msgstr "A hangeszköz nem nyitható meg a keverő vezérlőinek kezeléséhez."
 
-#~ msgid "Could not open audio device for mixer control handling. This version of the Open Sound System is not supported by this element."
-#~ msgstr "A hangeszköz nem nyitható meg a keverő vezérlőinek kezeléséhez. A Nyílt hangrendszer ezen verzióját nem támogatja az elem."
+#~ msgid ""
+#~ "Could not open audio device for mixer control handling. This version of "
+#~ "the Open Sound System is not supported by this element."
+#~ msgstr ""
+#~ "A hangeszköz nem nyitható meg a keverő vezérlőinek kezeléséhez. A Nyílt "
+#~ "hangrendszer ezen verzióját nem támogatja az elem."
 
 #~ msgid "Volume"
 #~ msgstr "Hangerő"
@@ -589,17 +575,29 @@ msgstr "Nem találhatók a(z) %s DVB-csatorna részletei"
 #~ msgid "%s %d"
 #~ msgstr "%s %d"
 
-#~ msgid "Could not open audio device for playback. Device is being used by another application."
-#~ msgstr "Nem nyitható meg hangeszköz a lejátszáshoz. Az eszközt másik alkalmazás használja."
+#~ msgid ""
+#~ "Could not open audio device for playback. Device is being used by another "
+#~ "application."
+#~ msgstr ""
+#~ "Nem nyitható meg hangeszköz a lejátszáshoz. Az eszközt másik alkalmazás "
+#~ "használja."
 
-#~ msgid "Could not open audio device for playback. You don't have permission to open the device."
-#~ msgstr "Nem nyitható meg hangeszköz a lejátszáshoz. Nincs jogosultsága az eszköz megnyitására."
+#~ msgid ""
+#~ "Could not open audio device for playback. You don't have permission to "
+#~ "open the device."
+#~ msgstr ""
+#~ "Nem nyitható meg hangeszköz a lejátszáshoz. Nincs jogosultsága az eszköz "
+#~ "megnyitására."
 
 #~ msgid "Could not open audio device for playback."
 #~ msgstr "Nem nyitható meg hangeszköz a lejátszáshoz."
 
-#~ msgid "Could not open audio device for playback. This version of the Open Sound System is not supported by this element."
-#~ msgstr "Nem nyitható meg hangeszköz a lejátszáshoz. A Nyílt hangrendszer ezen verzióját nem támogatja az elem."
+#~ msgid ""
+#~ "Could not open audio device for playback. This version of the Open Sound "
+#~ "System is not supported by this element."
+#~ msgstr ""
+#~ "Nem nyitható meg hangeszköz a lejátszáshoz. A Nyílt hangrendszer ezen "
+#~ "verzióját nem támogatja az elem."
 
 #~ msgid "Playback is not supported by this audio device."
 #~ msgstr "A hangeszköz nem támogatja a lejátszást."
