--- a/po/nl.po
+++ b/po/nl.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-bad 1.6.0\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2015-09-25 22:59+0200\n"
+"POT-Creation-Date: 2015-12-24 13:55+0100\n"
 "PO-Revision-Date: 2015-10-17 12:35+0200\n"
 "Last-Translator: Freek de Kruijf <f.de.kruijf@gmail.com>\n"
 "Language-Team: Dutch <vertaling@vrijschrift.org>\n"
@@ -18,254 +18,232 @@ msgstr ""
 "X-Generator: Lokalize 1.5\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
-#: ext/gl/gstgltestsrc.c:673
 msgid "format wasn't negotiated before get function"
 msgstr "formaat is niet onderhandeld vóór get-functie"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:5
 msgid "default GStreamer sound events audiosink"
 msgstr "standaard GStreamer audiosink voor geluidsgebeurtenissen"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:6
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:19
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:32
-msgid "GStreamer can play audio using any number of output elements. Some possible choices are osssink, pulsesink and alsasink. The audiosink can be a partial pipeline instead of just one element."
-msgstr "GStreamer kan geluid afspelen met elk aantal uitvoerelementen. Enige mogelijke keuzes zijn osssink, pulsesink en alsasink. De audiosink kan een gedeeltelijke pipeline zijn in plaats van gewoon één element."
+msgid ""
+"GStreamer can play audio using any number of output elements. Some possible "
+"choices are osssink, pulsesink and alsasink. The audiosink can be a partial "
+"pipeline instead of just one element."
+msgstr ""
+"GStreamer kan geluid afspelen met elk aantal uitvoerelementen. Enige "
+"mogelijke keuzes zijn osssink, pulsesink en alsasink. De audiosink kan een "
+"gedeeltelijke pipeline zijn in plaats van gewoon één element."
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:13
 msgid "description for default GStreamer sound events audiosink"
-msgstr "beschrijving van standaard GStreamer audiosink voor geluidsgebeurtenissen"
+msgstr ""
+"beschrijving van standaard GStreamer audiosink voor geluidsgebeurtenissen"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:14
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:27
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:40
 msgid "Describes the selected audiosink element."
 msgstr "Beschrijft het geselecteerde audiosink-element."
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:18
 msgid "default GStreamer audiosink for Audio/Video Conferencing"
 msgstr "standaard GStreamer audiosink voor audio/videoconferenties"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:26
-msgid "description for default GStreamer audiosink for Audio/Video Conferencing"
-msgstr "beschrijving van standaard GStreamer audiosink voor audio/videoconferenties"
+msgid ""
+"description for default GStreamer audiosink for Audio/Video Conferencing"
+msgstr ""
+"beschrijving van standaard GStreamer audiosink voor audio/videoconferenties"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:31
 msgid "default GStreamer audiosink for Music and Movies"
 msgstr "standaard GStreamer audiosink voor muziek en film"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:39
 msgid "description for default GStreamer audiosink for Music and Movies"
 msgstr "beschrijving van standaard GStreamer audiosink voor muziek en film"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:44
 msgid "default GStreamer videosink"
 msgstr "standaard GStreamer videosink"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:45
-msgid "GStreamer can play video using any number of output elements. Some possible choices are xvimagesink, ximagesink, sdlvideosink and aasink. The videosink can be a partial pipeline instead of just one element."
-msgstr "GStreamer kan video afspelen met elk aantal uitvoerelementen Enige mogelijke keuzes zijn xvimagesink, ximagesink, sdlvideosink en aasink. De videosink kan een gedeeltelijke pipeline zijn in plaats van gewoon één element."
+msgid ""
+"GStreamer can play video using any number of output elements. Some possible "
+"choices are xvimagesink, ximagesink, sdlvideosink and aasink. The videosink "
+"can be a partial pipeline instead of just one element."
+msgstr ""
+"GStreamer kan video afspelen met elk aantal uitvoerelementen Enige mogelijke "
+"keuzes zijn xvimagesink, ximagesink, sdlvideosink en aasink. De videosink "
+"kan een gedeeltelijke pipeline zijn in plaats van gewoon één element."
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:52
 msgid "description for default GStreamer videosink"
 msgstr "beschrijving van standaard GStreamer videosink"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:53
 msgid "Describes the selected videosink element."
 msgstr "Beschrijft het geselecteerde videosink-element."
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:57
 msgid "default GStreamer audiosrc"
 msgstr "standaard GStreamer audiobron"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:58
-msgid "GStreamer can record audio using any number of input elements. Some possible choices are osssrc, pulsesrc and alsasrc. The audio source can be a partial pipeline instead of just one element."
-msgstr "GStreamer kan geluid opnemen met elk aantal invoerelementen. Enige mogelijke keuzes zijn osssrc, pulsesrc en alsasrc. De audiobron kan een gedeeltelijke pipeline zijn in plaats van gewoon één element."
+msgid ""
+"GStreamer can record audio using any number of input elements. Some possible "
+"choices are osssrc, pulsesrc and alsasrc. The audio source can be a partial "
+"pipeline instead of just one element."
+msgstr ""
+"GStreamer kan geluid opnemen met elk aantal invoerelementen. Enige mogelijke "
+"keuzes zijn osssrc, pulsesrc en alsasrc. De audiobron kan een gedeeltelijke "
+"pipeline zijn in plaats van gewoon één element."
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:65
 msgid "description for default GStreamer audiosrc"
 msgstr "beschrijving van standaard GStreamer audiobron"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:66
 msgid "Describes the selected audiosrc element."
 msgstr "Beschrijft het geselecteerde audiobron-element."
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:70
 msgid "default GStreamer videosrc"
 msgstr "standaard GStreamer videobron"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:71
-msgid "GStreamer can record video from any number of input elements. Some possible choices are v4lsrc, v4l2src and videotestsrc. The video source can be a partial pipeline instead of just one element."
-msgstr "GStreamer kan video opnemen met elk aantal invoerelementen. Enige mogelijke keuzes zijn v4lsrc, v4l2src en videotestsrc. De videobron kan een gedeeltelijke pipeline zijn in plaats van gewoon één element."
+msgid ""
+"GStreamer can record video from any number of input elements. Some possible "
+"choices are v4lsrc, v4l2src and videotestsrc. The video source can be a "
+"partial pipeline instead of just one element."
+msgstr ""
+"GStreamer kan video opnemen met elk aantal invoerelementen. Enige mogelijke "
+"keuzes zijn v4lsrc, v4l2src en videotestsrc. De videobron kan een "
+"gedeeltelijke pipeline zijn in plaats van gewoon één element."
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:77
 msgid "description for default GStreamer videosrc"
 msgstr "beschrijving van standaard GStreamer videobron"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:78
 msgid "Describes the selected videosrc element."
 msgstr "Beschrijft het geselecteerde videobron-element."
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:82
 msgid "default GStreamer visualization"
 msgstr "standaard GStreamer visualisatie"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:83
-msgid "GStreamer can put visualization plugins in a pipeline to transform audio streams in video frames. Some possible choices are goom, goom2k1 and synaesthesia. The visualization plugin can be a partial pipeline instead of just one element."
-msgstr "GStreamer kan visualisatieplug-ins in een pipeline stoppen om audiostreams te transformeren in videoframes. Enige mogelijke keuzes zijn goom, goom2k1 en synaesthesia. De visualisatieplug-in kan een gedeeltelijke pipeline zijn in plaats van gewoon één element."
+msgid ""
+"GStreamer can put visualization plugins in a pipeline to transform audio "
+"streams in video frames. Some possible choices are goom, goom2k1 and "
+"synaesthesia. The visualization plugin can be a partial pipeline instead of "
+"just one element."
+msgstr ""
+"GStreamer kan visualisatieplug-ins in een pipeline stoppen om audiostreams "
+"te transformeren in videoframes. Enige mogelijke keuzes zijn goom, goom2k1 "
+"en synaesthesia. De visualisatieplug-in kan een gedeeltelijke pipeline zijn "
+"in plaats van gewoon één element."
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:90
 msgid "description for default GStreamer visualization"
 msgstr "beschrijving van standaard GStreamer visualisatie"
 
-#: ext/gsettings/org.freedesktop.gstreamer.default-elements.gschema.xml.in:91
 msgid "Describes the selected visualization element."
 msgstr "Beschrijft het geselecteerde visualisatie-element."
 
-#: ext/opencv/gsttemplatematch.c:442
 msgid "OpenCV failed to load template image"
 msgstr "OpenCV kon sjabloonafbeelding niet laden"
 
-#: ext/resindvd/resindvdsrc.c:362
 msgid "Could not read title information for DVD."
 msgstr "Kan de titelinformatie voor de DVD niet lezen."
 
-#: ext/resindvd/resindvdsrc.c:368
 #, c-format
 msgid "Failed to open DVD device '%s'."
 msgstr "Kan het DVD-apparaat '%s' niet openen."
 
-#: ext/resindvd/resindvdsrc.c:374
 msgid "Failed to set PGC based seeking."
 msgstr "Het instellen van het zoeken op basis van PGC is mislukt."
 
-#: ext/resindvd/resindvdsrc.c:1166
-msgid "Could not read DVD. This may be because the DVD is encrypted and a DVD decryption library is not installed."
-msgstr "Kon de dvd niet lezen. Dit kan zo zijn omdat de dvd versleuteld is en een bibliotheek voor ontcijferen niet is geïnstalleerd"
+msgid ""
+"Could not read DVD. This may be because the DVD is encrypted and a DVD "
+"decryption library is not installed."
+msgstr ""
+"Kon de dvd niet lezen. Dit kan zo zijn omdat de dvd versleuteld is en een "
+"bibliotheek voor ontcijferen niet is geïnstalleerd"
 
-#: ext/resindvd/resindvdsrc.c:1171 ext/resindvd/resindvdsrc.c:1180
 msgid "Could not read DVD."
 msgstr "Kon de dvd niet lezen."
 
-#: ext/smoothstreaming/gstmssdemux.c:380
-#: gst-libs/gst/adaptivedemux/gstadaptivedemux.c:525
 msgid "This file contains no playable streams."
 msgstr "Dit bestand bevat geen af te spelen streams."
 
-#: ext/sndfile/gstsfdec.c:769
 msgid "Could not open sndfile stream for reading."
 msgstr "Kan sndfile-stream niet openen om te lezen."
 
-#: ext/sndio/sndiosink.c:324 ext/sndio/sndiosrc.c:321
 msgid "Could not establish connection to sndio"
 msgstr "Kon geen verbinding opzetten naar sndio"
 
-#: ext/sndio/sndiosink.c:331 ext/sndio/sndiosrc.c:328
 msgid "Failed to query sndio capabilities"
 msgstr "Opvragen van de mogelijkheden van sndio is mislukt"
 
-#: ext/sndio/sndiosink.c:424 ext/sndio/sndiosrc.c:422
 msgid "Could not configure sndio"
 msgstr "Kon sndio niet instellen"
 
-#: ext/sndio/sndiosink.c:430 ext/sndio/sndiosrc.c:428
 msgid "Could not start sndio"
 msgstr "Kon sndio niet starten"
 
-#: gst/aiff/aiffparse.c:1458
 msgid "Internal data flow error."
 msgstr "Interne fout met gegevensdoorvoer."
 
-#: gst/asfmux/gstasfmux.c:1832
 msgid "Generated file has a larger preroll time than its streams duration"
-msgstr "Gegenereerd bestand heeft een grotere voorlooptijd dan de duur van zijn streams"
+msgstr ""
+"Gegenereerd bestand heeft een grotere voorlooptijd dan de duur van zijn "
+"streams"
 
-#: gst/camerabin2/camerabingeneral.c:166 gst/camerabin2/gstcamerabin2.c:1876
-#: gst/camerabin2/gstdigitalzoom.c:282 gst/camerabin2/gstviewfinderbin.c:271
 #, c-format
 msgid "Missing element '%s' - check your GStreamer installation."
 msgstr "Ontbrekend element '%s' - controleer uw installatie van GStreamer."
 
-#: gst/camerabin2/gstcamerabin2.c:364
 msgid "File location is set to NULL, please set it to a valid filename"
-msgstr "Locatie van bestand is op NUL gezet, stel het in op een geldige bestandsnaam"
+msgstr ""
+"Locatie van bestand is op NUL gezet, stel het in op een geldige bestandsnaam"
 
-#: gst/camerabin2/gstwrappercamerabinsrc.c:584
 msgid "Digitalzoom element couldn't be created"
 msgstr "Digitalzoom-element kon niet gemaakt worden"
 
-#: gst/dvdspu/gstdvdspu.c:1040
 msgid "Subpicture format was not configured before data flow"
-msgstr "Het format van de subafbeelding was niet ingesteld voor de gegevensstroom"
+msgstr ""
+"Het format van de subafbeelding was niet ingesteld voor de gegevensstroom"
 
-#: gst-libs/gst/adaptivedemux/gstadaptivedemux.c:2081
 msgid "Failed to get fragment URL."
 msgstr "Verkrijgen van de URL van het fragment is mislukt."
 
-#: gst-libs/gst/adaptivedemux/gstadaptivedemux.c:2282
-#: gst-libs/gst/adaptivedemux/gstadaptivedemux.c:2446
-#: gst/mpegtsdemux/mpegtsbase.c:1342 gst/mpegtsdemux/mpegtsbase.c:1346
-#: gst/nuvdemux/gstnuvdemux.c:736
 msgid "Internal data stream error."
 msgstr "Interne fout in gegevensstroom."
 
-#: gst-libs/gst/adaptivedemux/gstadaptivedemux.c:2383
 msgid "Couldn't download fragments"
 msgstr "Kan fragmenten niet downloaden"
 
-#: gst/videomeasure/gstvideomeasure_collector.c:294
 msgid "No file name specified for writing."
 msgstr "Geen bestandsnaam gespecificeerd voor de uitvoer."
 
-#: gst/videomeasure/gstvideomeasure_collector.c:300
 #, c-format
 msgid "Given file name \"%s\" can't be converted to local file name encoding."
-msgstr "Ingegeven bestandsnaam \"%s\" kan niet geconverteerd worden naar de codering van een lokale bestandsnaam."
+msgstr ""
+"Ingegeven bestandsnaam \"%s\" kan niet geconverteerd worden naar de codering "
+"van een lokale bestandsnaam."
 
-#: gst/videomeasure/gstvideomeasure_collector.c:307
 #, c-format
 msgid "Could not open file \"%s\" for writing."
 msgstr "Kan bestand \"%s\" niet openen voor uitvoer."
 
-#: sys/dvb/gstdvbsrc.c:1565 sys/dvb/gstdvbsrc.c:1754
 #, c-format
 msgid "Device \"%s\" does not exist."
 msgstr "Apparaat \"%s\" bestaat niet."
 
-#: sys/dvb/gstdvbsrc.c:1569
 #, c-format
 msgid "Could not open frontend device \"%s\"."
 msgstr "Kan het frontend-apparaat \"%s\" niet openen."
 
-#: sys/dvb/gstdvbsrc.c:1583
 #, c-format
 msgid "Could not get settings from frontend device \"%s\"."
 msgstr "Kan de instellingen van het frontend-apparaat \"%s\" niet verkrijgen."
 
-#: sys/dvb/gstdvbsrc.c:1600
 #, c-format
 msgid "Cannot enumerate delivery systems from frontend device \"%s\"."
 msgstr "Kan de afleversystemen van het frontend-apparaat \"%s\" niet opnoemen."
 
-#: sys/dvb/gstdvbsrc.c:1758
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Kan bestand \"%s\" niet openen om te lezen."
 
-#: sys/dvb/parsechannels.c:168
 msgid "Couldn't find DVB channel configuration file"
 msgstr "Kon het instellingenbestand van het DVB-kanaal niet vinden"
 
-#: sys/dvb/parsechannels.c:171
 #, c-format
 msgid "Couldn't load DVB channel configuration file: %s"
 msgstr "Kon het instellingenbestand \"%s\" van het DVB-kanaal niet laden"
 
-#: sys/dvb/parsechannels.c:180
 msgid "DVB channel configuration file doesn't contain any channels"
 msgstr "Het instellingenbestand van het DVB-kanaal bevat geen kanalen"
 
-#: sys/dvb/parsechannels.c:456
 #, c-format
 msgid "Couldn't find details for DVB channel %s"
 msgstr "Kon de details voor het DVB-kanaal %s niet vinden"
@@ -282,8 +260,12 @@ msgstr "Kon de details voor het DVB-kanaal %s niet vinden"
 #~ msgid "Could not open audio device for mixer control handling."
 #~ msgstr "Kan het audio-apparaat niet openen voor de mixerbesturing."
 
-#~ msgid "Could not open audio device for mixer control handling. This version of the Open Sound System is not supported by this element."
-#~ msgstr "Kan het audio-apparaat niet openen voor de mixerbesturing. Deze versie van het Open Soundsysteem wordt niet ondersteund door dit element."
+#~ msgid ""
+#~ "Could not open audio device for mixer control handling. This version of "
+#~ "the Open Sound System is not supported by this element."
+#~ msgstr ""
+#~ "Kan het audio-apparaat niet openen voor de mixerbesturing. Deze versie "
+#~ "van het Open Soundsysteem wordt niet ondersteund door dit element."
 
 #~ msgid "Volume"
 #~ msgstr "Volume"
@@ -588,17 +570,29 @@ msgstr "Kon de details voor het DVB-kanaal %s niet vinden"
 #~ msgid "%s %d"
 #~ msgstr "%s %d"
 
-#~ msgid "Could not open audio device for playback. Device is being used by another application."
-#~ msgstr "Kan het audio-apparaat niet openen voor afspelen. Apparaat is in gebruik bij een andere applicatie."
+#~ msgid ""
+#~ "Could not open audio device for playback. Device is being used by another "
+#~ "application."
+#~ msgstr ""
+#~ "Kan het audio-apparaat niet openen voor afspelen. Apparaat is in gebruik "
+#~ "bij een andere applicatie."
 
-#~ msgid "Could not open audio device for playback. You don't have permission to open the device."
-#~ msgstr "Kan het audio-apparaat niet openen voor afspelen. U hebt geen toestemming om het apparaat te openen."
+#~ msgid ""
+#~ "Could not open audio device for playback. You don't have permission to "
+#~ "open the device."
+#~ msgstr ""
+#~ "Kan het audio-apparaat niet openen voor afspelen. U hebt geen toestemming "
+#~ "om het apparaat te openen."
 
 #~ msgid "Could not open audio device for playback."
 #~ msgstr "Kan het audio-apparaat niet openen voor afspelen."
 
-#~ msgid "Could not open audio device for playback. This version of the Open Sound System is not supported by this element."
-#~ msgstr "Kan het audio-apparaat niet openen voor afspelen. Deze versie van het Open Soundsysteem wordt niet ondersteund door dit element."
+#~ msgid ""
+#~ "Could not open audio device for playback. This version of the Open Sound "
+#~ "System is not supported by this element."
+#~ msgstr ""
+#~ "Kan het audio-apparaat niet openen voor afspelen. Deze versie van het "
+#~ "Open Soundsysteem wordt niet ondersteund door dit element."
 
 #~ msgid "Playback is not supported by this audio device."
 #~ msgstr "Afspelen wordt door dit audio-apparaat niet ondersteund."
